# pennyai

./: README.md  main.py  pyproject.toml
.github/workflows/: daily_ingest.yml
backend/: main.py  server.py
backend/data/: llm_ready_dataset.parquet  llm_ready_dataset_20251030.parquet  llm_ready_dataset_20251031.parquet  llm_ready_dataset_20251103.parquet  processed_reddit_posts.parquet  processed_reddit_posts_20251031.parquet  processed_reddit_posts_20251103.parquet  processed_yfinance_info.parquet  processed_yfinance_info_20251031.parquet  processed_yfinance_info_20251103.parquet  reddit_posts.parquet  reddit_posts_20251030.parquet  reddit_posts_20251031.parquet  reddit_posts_20251103.parquet
backend/scripts/: create_summary_from_langchain.py  explore.ipynb  fetch_posts_from_reddit.py  get_ticker_info_from_yfinance.py  merge_reddit_and_yfinance.py  pre_process_reddit_posts.py
data/: processed_reddit_posts_20251030.parquet  processed_yfinance_info_20251030.parquet
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: SummaryCard.tsx
frontend/lib/: fetchData.ts
scripts/: create_duckdb_from_parquet.py  explore.ipynb  fetch_posts_from_reddit.py  get_ticker_info_from_yfinance.py  merge_reddit_and_yfinance.py  pre_process_reddit_posts.py
streamlit-frontend/: app.py
