[project]
name = "pennyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "fastapi>=0.121.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "praw>=7.8.1",
    "pyarrow>=22.0.0",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
